--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "GitHub clone",
   "dependencies": {
+    "uuid": "^13.0.0",
     "yargs": "^18.0.0"
   }
 }
